Added plotting JS script and updated index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<!DOCTYPE html>
 <head>
-  <title>Hello World</title>
+<meta charset="utf-8">
+<link type="text/css" href="style/core.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 </head>
 <body>
-  <h1>Hello world</h1>
+<script src="js/plot_chart.js"></script>
 </body>
-</html>
+
