--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+<html>
 <head>
 <meta charset="utf-8">
 <link type="text/css" href="style/core.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"/>
 </head>
 <body>
-<script src="js/plot_chart.js"></script>
+  <header>Bar Chart</header>
+  <aside>This is an aside</aside>
+  <section>
+    <script src="js/plot_chart.js"/>
+  </section>
 </body>
-
+</html>
