--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="utf-8">
 <link type="text/css" href="style/core.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js">
+</script>
 </head>
 <body>
   <header>Bar Chart</header>
   <aside>This is an aside</aside>
   <section>
-    <script src="js/plot_chart.js"/>
+    <script src="js/plot_chart.js"></script>
   </section>
 </body>
 </html>
