--- a/index.html
+++ b/index.html
@@ -2,35 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link type="text/css" href="style/core.css">
+<link rel="stylesheet" href="style/core.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js">
 </script>
 <title>Jacob's Site</title>
-<style>
-.bar {
-  fill: steelblue;
-}
-
-.bar:hover {
-  fill: brown;
-}
-
-.axis {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.x.axis path {
-  display: none;
-}
-
-</style>
 </head>
 <body>
   <header>Bar Chart</header>
